src/css/styles.scss
$background-color: #efefef;
$sandbox-color: #08b7e4;

/* Font */
@import url('https://fonts.googleapis.com/css?family=Roboto:300,700');

/* Global style rules */

iframe { 
	border: none;
 }

a { 
	color: $sandbox-color;
	text-decoration: none;
}

.row {
	max-width: 100%;
}

.page {
	#logo {
		margin-bottom: 50px;
	}
}

body {
	// Override browser default padding and margin
	margin: 0;
	// Set font globally
	font-family: 'Roboto', sans-serif;
	font-weight: 300;
	// Sticky the footer
	display: flex;
	min-height: 100vh;
	flex-direction: column;
	// Backgorund color
	background: $background-color;
}

main {
	// make footer sticky
	flex: 1 0 auto;
	// Vertically align content
	display: flex;
	align-items: center;
	flex-direction: column;
  	justify-content: center;
  	padding: 50px 0;
}

#footer {
	// make the copyright notics less in your face
	text-align: center;
	padding: 10px;
	opacity: 0.6;
	font-size: 13px;
	#cr {
		opacity: 0.7;
		margin-top: 15px;
		margin-bottom: 5px;
	}
}

/* Widespread rules */
#logo {
	transition: 0.3s;
	&:hover {
		transition: 0.3s;
		filter: drop-shadow( 2px 8px 5px rgba(0,0,0, 0.2) );
	}
}

#links {
	margin-top: 50px;
	text-align: center;

	span {
		color: #d0d0d0;
		margin: 10px;
	}

	a {
		padding: 15px 10px;
	}
}

/* Import grid system */
@import "gridsystem";

/* Get the index styling */
@import "index";

/* Get history page styling */
@import "history";

/* Import join/application styling */
@import "join";

/* Contact */
@import "contact";

/* Members */
@import "members";

/* Memberlist */
@import "_memberlist.scss";

